--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,12 +1,13 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
+ @media screen and (min-width: 768px) and (max-width: 992px) { /* CONFIGURAÇÃO PARA TABLET */
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
 
     section#login {
         width: 80vw;
+        height: 280px;
     }
 
     section#login > div#imagem {
@@ -15,19 +16,20 @@
         height: 100%;
     }
 
-    section#login > div#formulário {
+    section#login > div#formulario {
         float: right;
         width: 70%;
     }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) { /* CONFIGURAÇÕES DE DESKTOP */
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
 
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -36,7 +38,7 @@
         height: 100%;
     }
 
-    section#login > div#formulário {
+    section#login > div#formulario {
         float: left;
         width: 50%;
     }
@@ -46,6 +48,7 @@
     }
     
     div#formulário > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
