--- a/estilos/style.css
+++ b/estilos/style.css
@@ -27,7 +27,6 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     background-color: white;
     width: 250px;
     height: 515px;
@@ -35,6 +34,7 @@ section#login {
     overflow: hidden;
 
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    transform: translate(-50%, -50%);
     transition: width 0.3s, height .3s;
     transition-timing-function: ease;
 }
@@ -63,13 +63,37 @@ div#formulário > p {
 
 form > div.campo {
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     width: 100%;
     display: block;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 
+div.campo > span {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #94cfcd;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translatey(-12px);
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+    border: none;
+}
 form label {
     display: none;
 }
